syntax = "proto3";

package clutch.aws.kinesis.v1;

option go_package = "github.com/lyft/clutch/backend/api/aws/kinesis/v1;kinesisv1";

import "google/api/annotations.proto";

import "api/v1/annotations.proto";

service KinesisAPI {
  rpc GetStream(GetStreamRequest) returns (GetStreamResponse) {
    option (google.api.http) = {
      post : "/v1/aws/kinesis/getStream"
      body : "*"
    };
    option (clutch.api.v1.action).type = READ;
  }

  rpc UpdateShardCount(UpdateShardCountRequest) returns (UpdateShardCountResponse) {
    option (google.api.http) = {
      post : "/v1/aws/kinesis/updateShardCount"
      body : "*"
    };
    option (clutch.api.v1.action).type = UPDATE;
  }
}

message GetStreamRequest {
  string stream_name = 1;
  string region = 2;
}

message GetStreamResponse {
  option (clutch.api.v1.reference).fields = "stream";

  Stream stream = 1;
}

message UpdateShardCountRequest {
  string stream_name = 1;
  string region = 2;
  uint32 target_shard_count = 3;
}

message UpdateShardCountResponse {
}

message Stream {
  option (clutch.api.v1.id).patterns = {
    type_url : "clutch.aws.kinesis.v1.Stream",
    pattern : "{region}/{stream_name}"
  };

  string stream_name = 1;
  string region = 2;
  uint32 current_shard_count = 3;
}
